Se puede subir codigo hardware online. Primeros pasos logica backend

--- a/HardwareCode/platformio.ini
+++ b/HardwareCode/platformio.ini
@@ -18,3 +18,5 @@ lib_deps =
 	esphome/ESPAsyncWebServer-esphome@^3.3.0
 	olkal/HX711_ADC@^1.2.12
 	bblanchon/ArduinoJson@^7.3.0
+upload_protocol = espota  ; ✅ Habilita OTA en PlatformIO
+upload_port = 192.168.1.109  ; ✅ Coloca aquí la IP de tu ESP32S3
