--- a/HardwareCode/platformio.ini
+++ b/HardwareCode/platformio.ini
@@ -8,15 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-s3-devkitc-1]
+[env:freenove_esp32_s3_wroom]
 platform = espressif32
-board = esp32-s3-devkitc-1
+board = freenove_esp32_s3_wroom
 framework = arduino
-monitor_speed = 115200
 lib_deps = 
 	espressif/esp32-camera@^2.0.4
 	esphome/ESPAsyncWebServer-esphome@^3.3.0
 	olkal/HX711_ADC@^1.2.12
-	bblanchon/ArduinoJson@^7.3.0
-;upload_protocol = espota  ; ✅ Habilita OTA en PlatformIO
-;upload_port = 192.168.1.109  ; ✅ Coloca aquí la IP de tu ESP32S3
+	bblanchon/ArduinoJson@^7.3.1
+monitor_speed = 115200
