--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,8 @@
 
-Makefile                 linguist-detectable=false
-**/*.mk                  linguist-detectable=false
+**/Makefile        linguist-vendored
+**/makefile        linguist-vendored
+**/GNUmakefile     linguist-vendored
+**/*.mk            linguist-vendored
+
+
+
